feat: 添加获取LCTA-AU功能

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -40,3 +40,4 @@ jobs:
           ADDRESS: ${{ secrets.WEBNOTE_ADDRESS }}
         run: |
           python .github/UpdatePackage.py
+          python .github/UpdatePackage_LCTA.py
