--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,7 @@ venv.bak/
 dmypy.json
 changes.json
 FaustLauncher.exe
-main.exe
+yisangModLoader.exe
 create_link.bat
 ChineseFont.ttf
 ModLoader.zip
